--- a/Mini_Projet_Rapport.ipynb
+++ b/Mini_Projet_Rapport.ipynb
@@ -59,7 +59,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##balabala"
+    "-determiner le fênetre et le bloc\n",
+    "-Feature extraction\n",
+    "-MFCC\n",
+    "-calculer la distribution de gauss des deux blocs consécutifs\n",
+    "-on combine ces deux blocs, et on calcule la distribution de gauss du bloc combiné\n",
+    "-on stocke le résultat dans le tableaux"
    ]
   },
   {
@@ -370,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
