Commit pour le rapport. le partie de segmentation.  -- Rongbo LIU

--- a/Mini_Projet_Rapport.ipynb
+++ b/Mini_Projet_Rapport.ipynb
@@ -59,12 +59,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-determiner le fênetre et le bloc\n",
-    "-Feature extraction\n",
-    "-MFCC\n",
-    "-calculer la distribution de gauss des deux blocs consécutifs\n",
-    "-on combine ces deux blocs, et on calcule la distribution de gauss du bloc combiné\n",
-    "-on stocke le résultat dans le tableaux"
+    "-Determiner la taille de la fênetre et la taille du bloc.\n",
+    "\n",
+    "-Feature extraction. On utilise stFeatureExtraction() de pyAudioAnalysis pour extraire le court terme feature séquences pour un signal audio, en utilisant une taille de frame de 50 ms et une taille de étape de 25 ms. Pour pouvoir lire les échantillons audio, nous applelons la fonction readAudioFile() du fichier audioBasicIO.py.\n",
+    "\n",
+    "-Calculer les MFCCs (Mel Frequency Cepstrum Coefficient). Fréquence mel est proposée sur la base des caractéristiques auditives humaines, il y a une correspondance non linéaire entre féquence mel et fréquence Hz. Mel Frequency Cepstral Coefficients (MFCC) est l'utilisation d'une telle relation entre eux, calculer les caractéristiques des spectrales HZ. Nous avons donc utilisé MFCC pour la reconnaissance vocale.\n",
+    "\n",
+    "-Calculer la distribution de gauss des deux blocs consécutifs\n",
+    "\n",
+    "-On combine ces deux blocs, et on calcule la distribution de gauss du bloc combiné\n",
+    "\n",
+    "-On stocke le résultat dans le tableaux"
    ]
   },
   {
@@ -83,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -97,16 +102,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import des dépendances et les bibliothèques néssaires:\n",
+    "\n",
+    "-audioBasicIO\n",
+    "\n",
+    "-audioFeatureExtraction\n",
+    "\n",
+    "-numpy(stockage et manutention des grandes matrices)\n",
+    "\n",
+    "-math\n",
+    "\n",
+    "-matplotlib.pyplot"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# main process\n",
+    "[Fs, x] = audioBasicIO.readAudioFile(\"data/diarizationExample.wav\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-audioBasicIO.readAudioFile(path): Cette fonction retourne un tableau numpy qui stocke l'échantillon audio d'un WAV."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# main process\n",
-    "[Fs, x] = audioBasicIO.readAudioFile(\"data/diarizationExample.wav\")\n",
-    "\n",
     "TIME_OF_WINDOW = 0.050\t#a window = 0.05s\n",
     "TIME_OF_STEP = 0.025\t\t#step = 0.01s\n",
     "SIZE_OF_WINDOW = int(TIME_OF_WINDOW * Fs)\t#the number of frame for one window\n",
@@ -116,8 +154,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-Determiner le fênetre et le bloc\n",
+    "\n",
+    "-Une taille de fenêtre de 50 ms et une étape de 25 ms."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -131,24 +178,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def getMFCCs(block_start, block_end):\n",
-    "\treturn attribute[8:20,block_start:block_end+1]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "\treturn attribute[8:20,block_start:block_end+1]\n",
+    "\n",
     "def getMFCCsFromTime(moment_start, moment_end):\n",
     "\tblock_start = int(moment_start / BLOCK_STEP / TIME_OF_STEP - 1)\n",
     "\tblock_end = int(moment_end / BLOCK_STEP / TIME_OF_STEP - 1)\n",
@@ -156,8 +194,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "-Calculer les MFCCs."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -182,8 +229,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-Définir la méthode de Gauss pour calculer la distribution de gauss des deux blocs consécutifs"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -194,8 +248,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-Feature extraction\n",
+    "\n",
+    "-stFeatureExtraction(): pour extraire les courtes terme feature séquencesde pour un signal audio, en utilisant une taille de frame de 50 ms et une étape de frame de 25 ms."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -207,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -282,10 +345,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-Processus de calcul"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -334,6 +405,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "-Couper l'audio et délivre le résultat."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2. Reconnaissance"
    ]
   },
@@ -375,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
