--- a/Mini_Projet_Rapport.ipynb
+++ b/Mini_Projet_Rapport.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -278,7 +278,7 @@
    "source": [
     "while (END_OF_FILE == 0):\n",
     "\tif (FIRST_PAIR == 1):\n",
-    "\t\t# for the first pari of the block\n",
+    "\t\t# for the first part of the block\n",
     "\t\tblock_i_index_start = 0\n",
     "\t\tblock_i_index_end = BLOCK_SIZE\n",
     "\t\tblock_i_attribute = getMFCCs(block_i_index_start, block_i_index_end)\n",
@@ -300,7 +300,28 @@
     "\t\tblock_j_log_like = np.log(gauss(block_j_attribute, mean=block_j_mean, cov=block_j_cov))\n",
     "\n",
     "\n",
-    "\t\tFIRST_PAIR = 0\n",
+    "\t\tFIRST_PAIR = 0\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-Processus de calcul pour la première partie d'un bloc.\n",
+    "\n",
+    "-On calcule les MFCCs de block_i, ensuite on calcule la valeur moyenne des MFCCs, la valeur de covariance des MFCCs, la valeur de Gausse entre les MFCCs, la valeur moyenne des MFCCs et la valeur de covariance des MFCCs.\n",
+    "\n",
+    "-Pour le block_j, on fait les mêmes calculs comme block_i."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "\telse:\n",
     "\t\t#for the rest of the block\n",
     "\t\tblock_j_index_start += BLOCK_STEP\n",
@@ -348,47 +369,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-Processus de calcul"
+    "-On continue à faire les calculs pour la restante partie de bloc.\n",
+    "\n",
+    "-Nous avons constamment procédé alternatif pour éviter les calculs répétitifs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[193.04016786970868, 0.1]\n",
-      "[322.80179095213964, 0.15000000000000002]\n",
-      "[48.618235376979669, 3.75]\n",
-      "[206.06284495930311, 3.8000000000000003]\n",
-      "[264.46484990545093, 5.800000000000001]\n",
-      "[399.62976041628497, 6.7]\n",
-      "[185.27945423237873, 6.75]\n",
-      "[77.58484185258385, 11.05]\n",
-      "[55.7106174875737, 12.700000000000001]\n",
-      "[86.606563878601378, 13.100000000000001]\n",
-      "[65.574334156685495, 16.6]\n",
-      "[25.698883507655694, 18.75]\n",
-      "[119.17666505648083, 18.85]\n",
-      "[157.12783806256266, 18.900000000000002]\n",
-      "[82.460244094641666, 24.5]\n",
-      "[10.571385024471169, 25.150000000000002]\n",
-      "[1.5434625659503354, 25.25]\n",
-      "[211.66294698210436, 34.2]\n",
-      "[70.795005105859445, 34.35]\n",
-      "[100.16974802846812, 34.4]\n",
-      "[1, 1]\n",
-      "[1, 1]\n",
-      "[1, 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# cut the audio\n",
     "relation_cut = filter(lambda t: t[0] > 0, relation)\n",
@@ -405,7 +398,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-Couper l'audio et délivre le résultat."
+    "-Couper l'audio et délivre le résultat.\n",
+    "\n",
+    "-Si la valeur de Gauss est négative, c'est-à-dire que ce clip d'audio est la même personne comme le fragment précédent. Et si ls valeur de Gauss est positive, c'est-à-dire que ce clip d'audio n'est pas la même personne comme le fragment précédent, on va faire une coupe ici.\n",
+    "\n",
+    "-Nous ignorons tous les valeurs de Gauss négatives, seule interceptons les valeurs de Gauss positives.\n",
+    "\n",
+    "-Pour le resultat [x, y], x est le résultat de la mise en oeuvre de Gauss, y est le point de temps de couper l'audio."
    ]
   },
   {
