--- a/Mini_Projet_Rapport.ipynb
+++ b/Mini_Projet_Rapport.ipynb
@@ -61,16 +61,22 @@
    "source": [
     "- Déterminer la taille de la fênetre et la taille du bloc.\n",
     "\n",
-    "- Feature extraction \n",
+    "- Extraction des caractéristiques",
+    
     "On utilise readAudioFile() de la bibliothèque pour lire le fichier audio, puis obtenir sa fréquence d'échantillonage et le vecteur qui lui correspond. Ensuite, avec la méthode stFeatuureExtraction(), on extrait les caractéristiques de la bande audio sur des fenêtres de 50 ms qu'on incrémentées de 25 ms\n",
     "\n",
+    
     "- Calcul des MFCCs \n",
+    
     "MFCC pour Mel Frequency Cepstrum Coefficient, sont des coefficients basés sur les caractéristiques vocales humaines. il y a une correspondance non linéaire entre féquence mel et fréquence Hz. Mel Frequency Cepstral Coefficients (MFCC) est l'utilisation d'une telle relation entre eux, calculer les caractéristiques des spectrales HZ. Nous avons donc utilisé MFCC pour la reconnaissance vocale.\n",
     "\n",
+    
     "- Calculer la distribution de gauss de deux blocs consécutifs\n",
     "\n",
+    
     "- On combine ces deux blocs, et on calcule la distribution de gauss du bloc combiné\n",
     "\n",
+    
     "- On stocke le résultat dans le tableaux"
    ]
   },
@@ -687,7 +693,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dans ce mini-projet, on a etudié comment traiter une fichier en wav format pour avoir une segmentation. "
+    "Dans ce mini-projet, nous avons appris à segmenter un fichier audio au format .wav. "
    ]
   },
   {
