--- a/Mini_Projet_Rapport.ipynb
+++ b/Mini_Projet_Rapport.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "- Déterminer la taille de la fênetre et la taille du bloc.\n",
     "\n",
-    "- Extraction des caractéristiques",
+    "- Extraction des caractéristiques \n",
     
     "On utilise readAudioFile() de la bibliothèque pour lire le fichier audio, puis obtenir sa fréquence d'échantillonage et le vecteur qui lui correspond. Ensuite, avec la méthode stFeatuureExtraction(), on extrait les caractéristiques de la bande audio sur des fenêtres de 50 ms qu'on incrémentées de 25 ms\n",
     "\n",
@@ -71,7 +71,7 @@
     "MFCC pour Mel Frequency Cepstrum Coefficient, sont des coefficients basés sur les caractéristiques vocales humaines. il y a une correspondance non linéaire entre féquence mel et fréquence Hz. Mel Frequency Cepstral Coefficients (MFCC) est l'utilisation d'une telle relation entre eux, calculer les caractéristiques des spectrales HZ. Nous avons donc utilisé MFCC pour la reconnaissance vocale.\n",
     "\n",
     
-    "- Calculer la distribution de gauss de deux blocs consécutifs\n",
+    "- Calculer la distribution de gauss de deux blocs consécutifs \n",
     "\n",
     
     "- On combine ces deux blocs, et on calcule la distribution de gauss du bloc combiné\n",
