--- a/Mini_Projet_Rapport.ipynb
+++ b/Mini_Projet_Rapport.ipynb
@@ -100,7 +100,9 @@
     "from pyAudioAnalysis import audioFeatureExtraction\n",
     "import numpy as np\n",
     "import math\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import time\n",
+    "from numpy import *"
    ]
   },
   {
