--- a/Mini_Projet_Rapport.ipynb
+++ b/Mini_Projet_Rapport.ipynb
@@ -62,21 +62,15 @@
     "- Déterminer la taille de la fênetre et la taille du bloc.\n",
     "\n",
     "- Extraction des caractéristiques \n",
-    
     "On utilise readAudioFile() de la bibliothèque pour lire le fichier audio, puis obtenir sa fréquence d'échantillonage et le vecteur qui lui correspond. Ensuite, avec la méthode stFeatuureExtraction(), on extrait les caractéristiques de la bande audio sur des fenêtres de 50 ms qu'on incrémentées de 25 ms\n",
     "\n",
-    
     "- Calcul des MFCCs \n",
-    
     "MFCC pour Mel Frequency Cepstrum Coefficient, sont des coefficients basés sur les caractéristiques vocales humaines. il y a une correspondance non linéaire entre féquence mel et fréquence Hz. Mel Frequency Cepstral Coefficients (MFCC) est l'utilisation d'une telle relation entre eux, calculer les caractéristiques des spectrales HZ. Nous avons donc utilisé MFCC pour la reconnaissance vocale.\n",
     "\n",
-    
     "- Calculer la distribution de gauss de deux blocs consécutifs \n",
     "\n",
-    
     "- On combine ces deux blocs, et on calcule la distribution de gauss du bloc combiné\n",
     "\n",
-    
     "- On stocke le résultat dans le tableaux"
    ]
   },
@@ -96,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -130,11 +124,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python2.7/dist-packages/scipy/io/wavfile.py:42: WavFileWarning: Unknown wave file format\n",
+      "  warnings.warn(\"Unknown wave file format\", WavFileWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "# main process\n",
     "[Fs, x] = audioBasicIO.readAudioFile(\"data/diarizationExample.wav\")"
@@ -152,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -177,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -191,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -217,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -250,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -272,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -284,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -381,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -471,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -554,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -565,18 +568,8 @@
      "text": [
       "=======\n",
       "step 1: load data...\n",
-      "step 2: clustering...\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'mat' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-55-02dabff52c13>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;31m# step 2: clustering...\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[1;34m\"step 2: clustering...\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mdataSet\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataSet\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[0mk\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[0mcentroids\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclusterAssment\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mkmeans\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataSet\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'mat' is not defined"
+      "step 2: clustering...\n",
+      "cluster complete!\n"
      ]
     }
    ],
@@ -615,23 +608,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'classification' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-56-a779963f66f0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mrelation_cut_regonize\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m#This list is to store the information with different speakers\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mindexj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataSet\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m         \u001b[0mmin1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrelation_cut\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindexj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mclassification\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m         \u001b[0mmin2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrelation_cut\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindexj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mclassification\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[0mmin3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrelation_cut\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindexj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mclassification\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'classification' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## step 3: Mark speaker to each block\n",
     "relation_cut_regonize = [] #This list is to store the information with different speakers\n",
@@ -662,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -671,7 +652,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=========The data after regonizing as 4 speakers===========\n"
+      "=========The data after regonizing as 4 speakers===========\n",
+      "[[193.04016786970868, 0.1], 'Speak4']\n",
+      "[[322.80179095213964, 0.15000000000000002], 'Speaker1']\n",
+      "[[48.618235376979669, 3.75], 'Speaker2']\n",
+      "[[206.06284495930311, 3.8000000000000003], 'Speak4']\n",
+      "[[264.46484990545093, 5.800000000000001], 'Speaker1']\n",
+      "[[399.62976041628497, 6.7], 'Speaker1']\n",
+      "[[185.27945423237873, 6.75], 'Speak4']\n",
+      "[[77.58484185258385, 11.05], 'Speak3']\n",
+      "[[55.7106174875737, 12.700000000000001], 'Speaker2']\n",
+      "[[86.606563878601378, 13.100000000000001], 'Speak3']\n",
+      "[[65.574334156685495, 16.6], 'Speak3']\n",
+      "[[25.698883507655694, 18.75], 'Speaker2']\n",
+      "[[119.17666505648083, 18.85], 'Speak3']\n",
+      "[[157.12783806256266, 18.900000000000002], 'Speak4']\n",
+      "[[82.460244094641666, 24.5], 'Speak3']\n",
+      "[[10.571385024471169, 25.150000000000002], 'Speaker2']\n",
+      "[[1.5434625659503354, 25.25], 'Speaker2']\n",
+      "[[211.66294698210436, 34.2], 'Speak4']\n",
+      "[[70.795005105859445, 34.35], 'Speak3']\n",
+      "[[100.16974802846812, 34.4], 'Speak3']\n"
      ]
     }
    ],
