--- a/Mini_Projet_Rapport.ipynb
+++ b/Mini_Projet_Rapport.ipynb
@@ -628,10 +628,10 @@
     "\t\t\trelation_cut_regonize.append([relation_cut[indexj],\"Speaker2\"])\n",
     "\t\telse:\n",
     "\t\t\tif min3<min1 and min3 < min2 and min3<min4:\n",
-    "\t\t\t\trelation_cut_regonize.append([relation_cut[indexj],\"Speak3\"])\n",
+    "\t\t\t\trelation_cut_regonize.append([relation_cut[indexj],\"Speaker3\"])\n",
     "\t\t\telse:\n",
     "\t\t\t\tif min4<min1 and min4 < min2 and min4<min3:\n",
-    "\t\t\t\t\trelation_cut_regonize.append([relation_cut[indexj],\"Speak4\"])"
+    "\t\t\t\t\trelation_cut_regonize.append([relation_cut[indexj],\"Speaker4\"])"
    ]
   },
   {
@@ -653,26 +653,26 @@
      "output_type": "stream",
      "text": [
       "=========The data after regonizing as 4 speakers===========\n",
-      "[[193.04016786970868, 0.1], 'Speak4']\n",
-      "[[322.80179095213964, 0.15000000000000002], 'Speaker1']\n",
+      "[[193.04016786970868, 0.1], 'Speaker4']\n",
+      "[[322.80179095213964, 0.15000000000000002], 'Speaker3']\n",
       "[[48.618235376979669, 3.75], 'Speaker2']\n",
-      "[[206.06284495930311, 3.8000000000000003], 'Speak4']\n",
-      "[[264.46484990545093, 5.800000000000001], 'Speaker1']\n",
-      "[[399.62976041628497, 6.7], 'Speaker1']\n",
-      "[[185.27945423237873, 6.75], 'Speak4']\n",
-      "[[77.58484185258385, 11.05], 'Speak3']\n",
+      "[[206.06284495930311, 3.8000000000000003], 'Speaker4']\n",
+      "[[264.46484990545093, 5.800000000000001], 'Speaker3']\n",
+      "[[399.62976041628497, 6.7], 'Speaker3']\n",
+      "[[185.27945423237873, 6.75], 'Speaker4']\n",
+      "[[77.58484185258385, 11.05], 'Speaker2']\n",
       "[[55.7106174875737, 12.700000000000001], 'Speaker2']\n",
-      "[[86.606563878601378, 13.100000000000001], 'Speak3']\n",
-      "[[65.574334156685495, 16.6], 'Speak3']\n",
-      "[[25.698883507655694, 18.75], 'Speaker2']\n",
-      "[[119.17666505648083, 18.85], 'Speak3']\n",
-      "[[157.12783806256266, 18.900000000000002], 'Speak4']\n",
-      "[[82.460244094641666, 24.5], 'Speak3']\n",
-      "[[10.571385024471169, 25.150000000000002], 'Speaker2']\n",
-      "[[1.5434625659503354, 25.25], 'Speaker2']\n",
-      "[[211.66294698210436, 34.2], 'Speak4']\n",
-      "[[70.795005105859445, 34.35], 'Speak3']\n",
-      "[[100.16974802846812, 34.4], 'Speak3']\n"
+      "[[86.606563878601378, 13.100000000000001], 'Speaker2']\n",
+      "[[65.574334156685495, 16.6], 'Speaker2']\n",
+      "[[25.698883507655694, 18.75], 'Speaker1']\n",
+      "[[119.17666505648083, 18.85], 'Speaker2']\n",
+      "[[157.12783806256266, 18.900000000000002], 'Speaker4']\n",
+      "[[82.460244094641666, 24.5], 'Speaker2']\n",
+      "[[10.571385024471169, 25.150000000000002], 'Speaker1']\n",
+      "[[1.5434625659503354, 25.25], 'Speaker1']\n",
+      "[[211.66294698210436, 34.2], 'Speaker4']\n",
+      "[[70.795005105859445, 34.35], 'Speaker2']\n",
+      "[[100.16974802846812, 34.4], 'Speaker2']\n"
      ]
     }
    ],
